refactor rankingServiceImpl